# gitlab-pipeline-visualizer

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  README.md  ci-build.yml  ci-test.yml  gitlab_pipeline_visualizer.py  pyproject.toml  test-with-includes.yml
.github/: COMMIT_CONVENTION.md  PYPI_SETUP.md
.github/workflows/: publish.yml  test.yml  version.yml
gitlab-test/: complex-pipeline.yml  job-template.yml  test-with-includes.yml
