[project]
name = "glab-pipeviz"
version = "0.0.99"
description = "Visualize GitLab CI/CD pipeline configuration as a Mermaid diagram from local YAML files"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Stéphane 'Twidi' Angel", email = "s.angel@twidi.com" },
    { name = "Daniel (the78mole) Glaser", email = "me@the78mole.de"}
]
keywords = ["gitlab", "pipeline", "visualization", "mermaid", "ci", "cd", "yaml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dependencies = [
    "pyyaml>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/twidi/gitlab-pipeline-visualizer"
Repository = "https://github.com/twidi/gitlab-pipeline-visualizer"
Issues = "https://github.com/twidi/gitlab-pipeline-visualizer/issues"

[project.scripts]
glab-pipeviz = "gitlab_pipeline_visualizer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["gitlab_pipeline_visualizer.py"]

[tool.hatch.build.targets.sdist]
only-include = [
    "gitlab_pipeline_visualizer.py",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["test_gitlab_pipeline_visualizer.py"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
